--- a/style.css
+++ b/style.css
@@ -33,3 +33,10 @@ q{
     font-style: italic;
     font-family: 'Courier New', Courier, monospace;
 }
+
+.center{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 32%;
+}
