--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
     padding: 3em;
+    display: flex;
+    flex-direction: column;
 }
 
 .images{
@@ -38,5 +40,5 @@ q{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20em;
+    width: 30em;
 }
