--- a/style.css
+++ b/style.css
@@ -2,10 +2,17 @@ body{
     padding: 3em;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    align-content: center;
 }
 
 .images{
     padding: 4em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    align-content: center;
+
 }
 
 .images>span{
