--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
     align-items: center;
     align-content: center;
     width: 100vw;
+    height: 100vh;
+    overflow-x: hidden !important;
 }
 
 .images{
@@ -48,5 +50,5 @@ q{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 20em;
+    max-width: NNNpx;
 }
