--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
     flex-direction: column;
     align-items: center;
     align-content: center;
-    max-width: 100vw;
+    max-width: 100%;
     height: 100vh;
     overflow-x: hidden !important;
 }
