--- a/style.css
+++ b/style.css
@@ -29,7 +29,14 @@ body{
     letter-spacing: .04em;
 }
 
-a{
+.images a{
+    text-decoration: underline;
+    color: rgb(0, 94, 255);
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: .7em;
+}
+
+.traits-links>a{
     font-style: italic;
 }
 
