--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ body{
 }
 
 .images{
-    padding: 4em;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-content: center;
+    text-align: center;
 
 }
 
