--- a/style.css
+++ b/style.css
@@ -13,6 +13,10 @@ body{
     position: relative;
 }
 
+.has{
+    text-align: center;
+}
+
 .images{
     display: flex;
     flex-direction: column;
