--- a/style.css
+++ b/style.css
@@ -25,6 +25,13 @@ body{
 
 }
 
+.proof_images{
+    align-items: center;
+    align-content: center;
+    text-align: center;
+
+}
+
 .images>p{
     font-size: 1.5em;
     font-weight: bold;
