--- a/style.css
+++ b/style.css
@@ -29,11 +29,17 @@ body{
     align-items: center;
     align-content: center;
     text-align: center;
+    height: 100vh;
+    display: flex;
+    margin: 0;
 
 }
 
 .proof {
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
     padding-top: 3px;
 }
 
