--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body{
     align-content: center;
     text-align: center;
     height: 100vh;
-    display: flex;
+    display: column;
     margin: 0;
 
 }
